--- a/src/static/style.css
+++ b/src/static/style.css
@@ -27,7 +27,6 @@
 		--bg: var(--white);
 		--fg: var(--black);
 		--accent: var(--sage);
-		--accent-2: var(--deep-blue);
 		--link: #0F529A;
 		--link-hover: #09427f;
 	}
@@ -37,8 +36,7 @@
 	:root {
 		--bg: var(--black);
 		--fg: var(--white-1);
-		--accent: var(--pink);
-		--accent-2: var(--yellow);
+		--accent: var(--sage);
 		--link: var(--blue);
 		--link-hover: var(--deep-blue);
 	}
@@ -64,21 +62,35 @@ body {
 
 	gap: 8px;
 
-	width: 70%;
+	width: 70vw;
+}
+
+div.content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	flex-direction: row;
+	align-items: start;
+	justify-content: start;
+
+	gap: 18px;
+
+	width: 70vw;
+}
+
+main {
+	width: 60vw;
 }
 
 nav {
-	gap: 12px;
-
-	width: 100%;
+	width: 10vw;
 	padding: 8px;
-	margin-bottom: 18px;
-	border-bottom: 1px solid var(--accent);
+	border-right: 1px solid var(--accent);
 }
 
 footer {
-	justify-self: flex-end;
-	align-self: flex-end;
+	text-align: right;
 }
 
 code {
@@ -103,8 +115,6 @@ hr {
 	border-left: none;
 	border-right: none;
 	border-bottom: 1px solid var(--accent);
-
-	width: 100%;
 }
 
 ul.favourited-list {
@@ -134,6 +144,14 @@ summary {
 	cursor: pointer;
 }
 
+div.buttons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 8px;
+}
+
 .swash {
 	display: inline-block;
 	width: 30px;
@@ -151,23 +169,27 @@ summary {
 }
 
 .secret {
-	color: var(--accent-2);
+	color: var(--accent);
 }
 
 /* "Mobile Mode" */
 @media only screen and (max-device-width: 600px) {
-	:root {
-		font-size: 2rem;
+	body {
+		width: 98vw;
 	}
 
-	body {
-		width: 98%;
+	div.content {
+		flex-direction: column;
+		width: 98vw;
+	}
+
+	main {
+		width: 98vw;
 	}
 
 	nav {
-		flex-direction: column;
-		align-items: start;
-
-		padding: 20px;
+		width: 98vw;
+		padding: 8px 0 8px 0;
+		border-right: none;
 	}
 }
